--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,25 +1,20 @@
-{% set version = "0.0" %}
+{% set version = "0.1" %}
 
 package:
   name: otfmi
   version: {{ version }}
 
 source:
-  #fn: otfmi-{{ version }}.tar.gz
-  #url: https://github.com/openturns/otfmi/archive/v{{ version }}.tar.gz
-  #sha256: 7ea2d3e321a2aae80d7361074627029490202ad33a03b557014b38393bb13c9a
-
-  # for testing (a release is on the way)
-  git_url: https://github.com/openturns/otfmi.git
-  git_rev: 198d704
+  fn: otfmi-{{ version }}.tar.gz
+  url: https://github.com/openturns/otfmi/archive/v{{ version }}.tar.gz
+  sha256: f644808b9ac395f0f04de28f09e4e351cf504d3cd8489f98a8b24f9ded8c9384
 
 build:
-  number: 2
+  number: 0
   script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
   build:
-    - toolchain
     - setuptools
     - python
   run:
