--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 
 build:
   noarch: python
-  number: 2
+  number: 3
   script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
@@ -24,6 +24,7 @@ requirements:
     - python
     - openturns
     - pyfmi
+    - assimulo >=3.0
 
 test:
   imports:
