--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,7 +19,7 @@ requirements:
     - pip
     - python
   run:
-    - python
+    - python >=3.6
     - openturns
     - pyfmi
     - assimulo >=3.0
