--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "0.15" %}
+{% set version = "0.16" %}
 
 package:
   name: otfmi
@@ -7,7 +7,7 @@ package:
 source:
   fn: otfmi-{{ version }}.tar.gz
   url: https://github.com/openturns/otfmi/archive/v{{ version }}.tar.gz
-  sha256: 18f481a20d08aa0b6ad85b21a27d43a1b13242696568da7f81ed3304b3be0f6e
+  sha256: 5a1d23362f97da34117026662f73ae1405e3bbe92e2d1c01f8b68f33d157f0c3
 
 build:
   noarch: python
@@ -23,6 +23,7 @@ requirements:
     - openturns
     - pyfmi
     - assimulo >=3.0
+    - pythonfmu
     - dill
 
 test:
