--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "0.16.5" %}
+{% set version = "0.16.6" %}
 
 package:
   name: otfmi
@@ -7,7 +7,7 @@ package:
 source:
   fn: otfmi-{{ version }}.tar.gz
   url: https://github.com/openturns/otfmi/archive/v{{ version }}.tar.gz
-  sha256: 1cdcc249c8c18e74ee939da5c0aaf69240a138c63aa8c747564328b53c3d0149
+  sha256: 0cd487cda5c80e9d3a2420b34090f046ed0586a88e952b15446319b926e76d4b
 
 build:
   noarch: python
@@ -17,9 +17,10 @@ build:
 requirements:
   host:
     - pip
-    - python
+    - setuptools
+    - python {{ python_min }}
   run:
-    - python >=3.6
+    - python >={{ python_min }}
     - openturns
     - pyfmi
     - assimulo >=3.0
